--- a/app/views/pawnshops/new.html.erb
+++ b/app/views/pawnshops/new.html.erb
@@ -1,8 +1,4 @@
-<div class="booyah-box col-10 offset-1">
-  <h1>Enter Chess Team Name</h1>
-  <%= simple_form_for @pawn do |f| %>
-    <%= f.input :name %>
-    <br />
-    <%= f.submit 'Create', class: 'btn btn-primary' %>
-  <% end %>
-</div>
+<h1>Enter Your Quote Details</h1
+><%= simple_form_for @pawn do |f| %>
+  <%= f.input :name %>
+<% end %>
