--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,14 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
+    <%= link_to root_path do %>
+  
+         The Rubber Duckies
+    <% end %>
+
+   <br />
+
+    <%= link_to 'Team Form', new_pawnshop_path %>
 
   <body>
     <%= yield %>
