--- a/app/views/pawnshops/new.html.erb
+++ b/app/views/pawnshops/new.html.erb
@@ -1,4 +1,5 @@
-<h1>Enter Your Quote Details</h1
-><%= simple_form_for @pawn do |f| %>
-  <%= f.input :name %>
-<% end %>
+
+  <h1>Enter Team Details</h1>
+  <%= simple_form_for @pawn do |f| %>
+    <%= f.input :name %>
+  <% end %>
