--- a/app/views/pawnshops/new.html.erb
+++ b/app/views/pawnshops/new.html.erb
@@ -2,4 +2,5 @@
   <h1>Enter Team Details</h1>
   <%= simple_form_for @pawn do |f| %>
     <%= f.input :name %>
+    <%= f.submit 'Create' %>
   <% end %>
