--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,2 +1,8 @@
 <h1>Welcome to my Awesome Web App</h1>
-<h1><%= @game.inspect %></h1>
+<% @games.each do |game| %>
+  <div>
+    <h1><%= game.name %></h1><br />
+  </div>
+
+  <hr />
+<% end %>
