--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -1,3 +1,27 @@
 // Place all the styles related to the Games controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+table {
+	margin: 0 auto;
+	border-collapse: collapse;
+	background: #999;
+	border: 5px  solid #333;
+}
+
+td {
+    width: 60px; height: 60px;
+}
+
+.pieces {
+    float: center;
+    font-size: 65px;
+    text-align:center;
+    display: table-cell;
+    vertical-align:middle;
+}
+
+tr:nth-child(odd) td:nth-child(even), tr:nth-child(even) td:nth-child(odd) {
+	background: white;
+}
