--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,1 +1,11 @@
 @import "bootstrap";
+
+.hero {
+  background: image_url('ChessHero.jpeg') no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  height: 670px;
+  box-shadow: 0px 1px 3px #2a2a2a;
+}
