--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,6 +1,29 @@
-<h1>Enter Your Team Details</h1>
-<%= simple_form_for @game do |f| %>
-  <%= f.input :name %>
-  <br />
-  <%= f.submit 'Create', class: 'btn btn-danger' %>
-<% end %>
+<section class="login-block">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4 mx-auto login-sec">
+        <h2 class="text-center">START A NEW GAME</h2>
+          <form class="login-form">
+            <div class="form-group">
+              <label for="exampleInputEmail1" class="text-uppercase">Username</label>
+              <input type="text" class="form-control" placeholder="">
+            </div>
+              <div class="form-group">
+                <label for="exampleInputPassword1" class="text-uppercase">Password</label>
+                <input type="password" class="form-control" placeholder="">
+              </div>
+            <div class="form-check">
+              <label class="form-check-label">
+              <input type="checkbox" class="form-check-input">
+              </label>
+              <button type="submit" class="btn btn-login float-right">CREATE</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+    
+  
+  
