--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,1 +1,4 @@
-<h1>Welcome to the team show page</h1>
+<br />
+<div class="booyah-box col-6 offset-3">
+  <h1 class="text-center"><%= @game.name %></h1>
+</div>
