--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -2,26 +2,28 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-
-table {
-	margin: 0 auto;
-	border-collapse: collapse;
-	background: #999;
-	border: 5px  solid #333;
+#chessboard, .black_square, .white_square {
+	display:block;
+	padding:0px;
+	margin:0px;
 }
 
-td {
-    width: 60px; height: 60px;
+#chessboard {
+	width:394px;
+	height:394px;
+	border:5px solid #000000;
 }
 
-.pieces {
-    float: center;
-    font-size: 65px;
-    text-align:center;
-    display: table-cell;
-    vertical-align:middle;
+.black_square, .white_square {
+	width:48px;
+	height:48px;
+	float:left;
 }
 
-tr:nth-child(odd) td:nth-child(even), tr:nth-child(even) td:nth-child(odd) {
-	background: white;
+.black_square {
+	background-color:#000000;
+}
+
+.white_square {
+	background-color:#FFFFFF;
 }
