--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,16 +1,15 @@
 
-<table>
-<% 8.times do |row_index| %>
-  <tr>
 
-    <% 8.times do |col_index|  %>
-      <td>
-        <% piece = Piece.find_by_position(col_index, row_index, @game.id) %>
-        <% if piece.present? %>
-          <span class="piece" data='{"id": <%= piece.id %>, "game_id": <%= @game.id %>}'><%= piece.to_ascii_piece.html_safe %></span>
-        <% end %>
-      </td>
-    <% end %>
-  </tr>
-<% end %>
-</table>
+<br />
+
+<div id="chessboard">
+	<% 4.times do %>
+		<%= render 'odd_row' %>
+		<%= render 'even_row' %>
+	<% end %>
+</div>
+
+
+
+
+<br />
