--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,7 +1,7 @@
 <section class="login-block">
-  <div class="container">
+  <div class="newgame-container mx-auto">
     <div class="row">
-      <div class="col-md-4 mx-auto login-sec">
+      <div class="col-md-12 mx-auto login-sec">
         <h2 class="text-center">START A NEW GAME</h2>
           <form class="login-form">
             <div class="form-group">
@@ -13,10 +13,7 @@
                 <input type="password" class="form-control" placeholder="">
               </div>
             <div class="form-check">
-              <label class="form-check-label">
-              <input type="checkbox" class="form-check-input">
-              </label>
-              <button type="submit" class="btn btn-login float-right">CREATE</button>
+              <button type="submit" class="btn btn-login">CREATE</button>
             </div>
           </form>
         </div>
@@ -24,6 +21,8 @@
     </div>
   </div>
 </section>
+              
+              
     
   
   
