--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,7 +1,8 @@
-<h1>Welcome to my Awesome Web App</h1>
+<h1>Create Game</h1>
 <% @games.each do |game| %>
   <div>
-    <h1><%= game.name %></h1><br />
+   <h1><%= link_to game.name, game_path(game) %></h1><br />
+    <i><%= game.name %></i><br />
   </div>
 
   <hr />
