--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,4 +1,11 @@
 
+<br />
+  <div>
+    <h1><%= @game.name %></h1><br />
+  </div>
+
+  <hr />
+
 
 <br />
 
@@ -8,8 +15,5 @@
 		<%= render 'even_row' %>
 	<% end %>
 </div>
-
-
-
 
 <br />
