--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
          The Rubber Duckies
     <% end %>
    <br />
-    <%= link_to 'Team Names', new_game_path%>
+    <%= link_to 'Create New Game', new_game_path%>
    <br />
 
 
