--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -6,12 +6,14 @@
 	display:block;
 	padding:0px;
 	margin:0px;
+
 }
 
 #chessboard {
 	width:394px;
 	height:394px;
 	border:5px solid #000000;
+	text-align: center;
 }
 
 .black_square, .white_square {
