--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,3 +1,4 @@
+
 @import "bootstrap";
 @import "font-awesome";
 @import url('https://fonts.googleapis.com/css?family=Homemade+Apple');
@@ -11,8 +12,18 @@
   background-size: cover;
   height: 700px;
   box-shadow: 0px 1px 3px #2a2a2a;
+
+}
+
+ .newgamebg {
+ 	background: image_url('newgamescreen.jpeg') no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  height: 700px;
+  box-shadow: 0px 1px 3px #2a2a2a;
   
- 
 }
 
 .nav-link {
@@ -37,7 +48,7 @@
 
 }
 
-#modal-trigger {
+#trigger {
 	background-color: red;
 	width: 200px;
 	opacity: .73;
@@ -211,12 +222,15 @@ section .section-title {
 }
 
 #logIN {
-	display: none; 
+	
+	display: none;
 	background: linear-gradient(to bottom right, #bdc3c7, #bdc3c7);
-	border-radius: 12px;
-  	opacity: .8;
-  	width: 100%;
- }
+	
+	}
+
+
+
+
 
 .login-sec {padding: 30px 30px; position:relative;}
 .login-sec h2{margin-bottom:30px; font-weight:800; font-size:30px; color: black;}
