--- a/app/views/pawnshops/index.html.erb
+++ b/app/views/pawnshops/index.html.erb
@@ -1,3 +1,4 @@
+<script src="showloginform.js"></script>
 
 
 
@@ -8,20 +9,19 @@
     </div>
   </div>
 
-  <div class="row">
-      <div class="mx-auto">
-        <button onclick="myFunction()" type="button" class="btn btn-secondary btn-lg" id="modal-trigger" data-toggle="modal" data-target="#myModal">
-          Sign In
-        </button>
-      </div>
-    </div>    
+
 
   
-  
-  <br />
-   
-    <div class="login-container mx-auto">
-      <div id="logIN" class="col-md-12 mx-auto login-sec">
+
+  <div class="row">
+    <div class="mx-auto">
+      <button id="trigger" type="button" class="btn btn-primary btn-lg">Sign In</button>
+    </div>
+  </div>
+
+  <br>
+
+      <div id="logIN" class="col-md-3 mx-auto login-sec">
         <h2 class="text-center">SIGN IN</h2>
           <form class="login-form">
             <div class="form-group">
@@ -43,34 +43,8 @@
         </div>
       </div>
     </div>
-  </div>
-
-      
-
-  <script>
-  function myFunction() {
-    var x = document.getElementById("logIN");
-    if (x.style.display === "block") {
-        x.style.display = "none";
-    } else {
-        x.style.display = "block";
-    }
-  }
-  </script>
-    
   
-
-  
-
-
-   
-      
-               
-
-
-    
- 
-  <!--Our Team-->
+    <!--Our Team-->
 
     <section id="team" class="pb-5">
      	<div class="container">
@@ -83,47 +57,47 @@
           			<div class="mainflip">
             			<div class="frontside">
             				<div class="card">
-                    <div class="card-body text-center">
-                      <p><img class=" img-fluid" src="/assets/RyanandBrads.jpg" alt="Ryan Marks"></p>
-                      <h4 class="card-title">Ryan Marks</h4>
-                      <p class="card-text">This is basic card with image on top, title, description and button.</p>
-                      <a href="#" class="btn btn-primary btn-sm"><i class="fa fa-plus"></i></a>
+                      <div class="card-body text-center">
+                        <p><img class=" img-fluid" src="/assets/RyanandBrads.jpg" alt="Ryan Marks"></p>
+                          <h4 class="card-title">Ryan Marks</h4>
+                        <p class="card-text">This is basic card with image on top, title, description and button.</p>
+                        <a href="#" class="btn btn-primary btn-sm"><i class="fa fa-plus"></i></a>
+                      </div>
                     </div>
-                  </div>
-                 </div>
-                <div class="backside">
-                  <div class="card">
-                    <div class="card-body text-center mt-4">
-                      <h4 class="card-title">About Ryan</h4>
-                        <p class="card-text">This is basic card with image on top, title, 	description and button.This is basic card with image on top, title, description and button.This is basic card with image on top, title, description and button.</p>
-                        <ul class="list-inline">
-                        	<li class="list-inline-item">
-                          	<a class="social-icon text-xs-center" target="_blank" href="#">
-                            	<i class="fa fa-facebook"></i>
-                            </a>
-                          </li>
-                          <li class="list-inline-item">
-                              <a class="social-icon text-xs-center" target="_blank" href="#">
-                                  <i class="fa fa-twitter"></i>
+                   </div>
+                  <div class="backside">
+                    <div class="card">
+                      <div class="card-body text-center mt-4">
+                        <h4 class="card-title">About Ryan</h4>
+                          <p class="card-text">This is basic card with image on top, title, 	description and button.This is basic card with image on top, title, description and button.This is basic card with image on top, title, description and button.</p>
+                          <ul class="list-inline">
+                          	<li class="list-inline-item">
+                            	<a class="social-icon text-xs-center" target="_blank" href="#">
+                              	<i class="fa fa-facebook"></i>
                               </a>
-                          </li>
-                          <li class="list-inline-item">
-                          	<a class="social-icon text-xs-center" target="_blank" href="#">
-                           		<i class="fa fa-skype"></i>
-                            </a>
-                          </li>
-                          <li class="list-inline-item">
-                            <a class="social-icon text-xs-center" target="_blank" href="#">
-                              <i class="fa fa-google"></i>
-                            </a>
-                          </li>
-                        </ul>
+                            </li>
+                            <li class="list-inline-item">
+                                <a class="social-icon text-xs-center" target="_blank" href="#">
+                                  <i class="fa fa-twitter"></i>
+                                </a>
+                            </li>
+                            <li class="list-inline-item">
+                            	<a class="social-icon text-xs-center" target="_blank" href="#">
+                             		<i class="fa fa-skype"></i>
+                              </a>
+                            </li>
+                            <li class="list-inline-item">
+                              <a class="social-icon text-xs-center" target="_blank" href="#">
+                                <i class="fa fa-google"></i>
+                              </a>
+                            </li>
+                          </ul>
+                        </div>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
-            </div>
           <!-- End Rubber Duckie #1 -->
 
           <!--Rubber Duckie #2 -->
@@ -229,7 +203,7 @@
           <!--Rubber Duckie #4 -->
 
             <div class="col-sm">
-              <div class="image-flip" onclick="=this.classList.toggle('flipped')">
+              <div class="image-flip" ontouchstart="=this.classList.toggle('hover')">
                 <div class="mainflip">
                   <div class="frontside">
                     <div class="card">
@@ -279,6 +253,13 @@
      </div>
     </section>
     <!-- Team -->
+
+
+
+
+    
+
+    
     
 
       
@@ -305,4 +286,13 @@
 
       
              
+     
+
+  
+  
+  
+
+
+   
+  
       
