--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,36 +1,59 @@
-<<<<<<< HEAD
+
+<!--
 <br/>
 <div>
   <h1><%= @game.name %></h1><br/>
-=======
-
-
-
-<br />
-
-<div id="chessboard">
-	<% 4.times do %>
+  <br />
+  <div id="chessboard">
+	 <% 4.times do %>
 		<%= render 'odd_row' %>
 		<%= render 'even_row' %>
-	<% end %>
->>>>>>> 347b4ac3a05578df7d69eecdefa98d56afc8823d
+	 <% end %>
+  </div>
 </div>
-
 <hr/>
 
-<br/>
-  <div id="chessboard">
-    <% 4.times do %>
-      <%= render 'odd_row' %>
-      <%= render 'even_row' %>
-    <% end %>
-  </div>
+-->
+
+<div class="col-10 center offset-1">
+    <table id="chessboard">
+      <tbody>
+        <% [8, 7, 6, 5, 4, 3, 2, 1].each do |row| %>
+          <tr>
+            <% (1..8).each do |col| %>
+              <td
+                id=<%="#{col}#{row}"%>
+              <% if (col + row).odd? %>
+                class="white"
+              <% else %>
+                class="black"
+              <% end %>
+              >
+                <% piece_image = @game.render_piece(col, row) %>
+                <% if piece_image.present? %>
+                  <% piece = @game.get_piece_at_coor(col, row) %>
+                  <%= image_tag piece_image, :id => "piece", :data => {
+                      :id => piece.id,
+                      :type => piece.type,
+                      :color => (piece.is_white ? "white" : "black"),
+                      :x => piece.x_position,
+                      :y => piece.y_position
+                    }
+                  %>
+                <% end %>
+              </td>
+            <% end %>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
 
 
-<<<<<<< HEAD
-<br/>
-=======
 
-<br />
 
->>>>>>> 347b4ac3a05578df7d69eecdefa98d56afc8823d
+
+
+
+
+
+
