--- a/app/views/pawnshops/index.html.erb
+++ b/app/views/pawnshops/index.html.erb
@@ -37,7 +37,7 @@
             </div>
               <br>
             <div class="col-md-12 mx-auto">
-              <a class="btn btn-primary btn-lg btn-block" id="login-button" href="/games/new" role="button">Log In</a>
+              <a class="btn btn-primary btn-lg btn-block" id="login-button" href="/games" role="button">Log In</a>
             </div>
           </form>
         </div>
