--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,21 +1,23 @@
+<div id="gameId" data-game-id=<%= @game.id %>></div>
 
-<!--
-<br/>
-<div>
-  <h1><%= @game.name %></h1><br/>
-  <br />
-  <div id="chessboard">
-	 <% 4.times do %>
-		<%= render 'odd_row' %>
-		<%= render 'even_row' %>
-	 <% end %>
-  </div>
-</div>
-<hr/>
+  
 
--->
+  <h1 class="text-center">Pawnshop Chess</h1>
 
-<div class="col-10 center offset-1">
+  
+    <div id="currentUser" data-current-user-id=<%= current_user.id %>>
+      <p>Logged in as <%= current_user.name %></p>
+    </div>
+    <div id="whitePlayer" data-white-player-id=<%= @game.white_player_id %>>
+      <p><%= @game.user_white.name %> is playing white.</p>
+    </div>
+    <div id="blackPlayer" data-black-player-id=<%= @game.black_player_id %>>
+      <% if @game.black_player != nil %>
+        <p><%= @game.black_player.name %> is playing black.</p>
+      <% end %>
+    </div> 
+
+    <div class="col-10 center offset-1">
     <table id="chessboard">
       <tbody>
         <% [8, 7, 6, 5, 4, 3, 2, 1].each do |row| %>
@@ -29,8 +31,6 @@
                 class="black"
               <% end %>
               >
-                <% piece_image = @game.render_piece(col, row) %>
-                <% if piece_image.present? %>
                   <% piece = @game.get_piece_at_coor(col, row) %>
                   <%= image_tag piece_image, :id => "piece", :data => {
                       :id => piece.id,
@@ -47,6 +47,10 @@
         <% end %>
       </tbody>
     </table>
+
+    <br />
+    <%= button_to "Go back to index of games", games_path, :method => :get, :class => "btn btn-success" %>        
+    <br /><br /><br /><br /><br /><br />
 
 
 
