--- a/app/views/pawnshops/index.html.erb
+++ b/app/views/pawnshops/index.html.erb
@@ -16,8 +16,8 @@
   <div class="row">
     <div class="mx-auto">
       <div class="btn btn-primary btn-lg">
-        <%= link_to 'Sign In', new_user_session_url, :class => "btn" %> 
-        <%= link_to 'Sign Up', new_user_registration_url, :class => "btn" %>
+        <%= link_to 'Sign In', new_user_session_path, :class => "btn" %> 
+        <%= link_to 'Sign Up', new_user_registration_path, :class => "btn" %>
         <%= link_to "Sign out", destroy_user_session_path, method: :delete, class:'btn btn-warning' %>
       </div>
     </div>
