able to join game as black and populate the board

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -255,7 +255,7 @@ table td {
 }
 
 .black {
-    background-color: black;
+    background-color: grey;
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
