List/Join ongoing games/Delete Games/Populate Board

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,4 +1,21 @@
+<div class="container justify-content-center">
+  <h1>Welcome to Game<%=@game.id%></h1>
+</div>
+<br>
 
+<h1 class="text-center">The Pawnshop</h1>
+
+  
+    <div id="currentUser" data-current-user-id=<%= current_user.id %>>
+      <p>You are logged in as <%= current_user.name %></p>
+    </div>
+    <div id="whitePlayer" data-user-white-id=<%= @game.white_player_id %>>
+      <p><%= @game.white_player.name %> is playing as white.</p>
+    </div>
+    <div id="blackPlayer" data-user-black-id=<%= @game.black_player_id %>>
+      <p><%= @game.black_player.name %> is playing as black.</p>
+    </div>
+  
 
   <div class="col-10 center offset-1">
     <table id="chessboard">
