--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -2,6 +2,7 @@
         <h1>Welcome back <%= current_user.name %>!</h1>
         <p class="lead">
         <%= link_to "Sign Out", destroy_user_session_path, :method => :delete, :class => 'btn btn-large btn-danger' %>
+        <%= link_to "Delete your registration", user_registration_path, method: :delete, class:'btn btn-danger' %>
     </div>
         
       
@@ -33,6 +34,27 @@
       <%= link_to "Join game as black", game_path(game.id), method: :put, class: "btn btn-success"%>
       <% end %>
     </div>
+
+    <h1>Here is a list of all the games that have two players and are currently ongoing:</h1>  
+      <% @ongoing_games.each do |game| %>
+    <div class="card-header">
+      <h3> Game: <%= game.name %> </h3>
+    </div>
+    <div class="container-fluid">
+      
+      
+      <div class="col-12">
+        <% if current_user == game.white_player || current_user == game.black_player %>
+          <%= link_to "Continue game", game_path(game.id), method: :get, class: "btn btn-success" %>
+        <% end %>
+        <% if current_user == game.white_player || current_user == game.black_player %>
+          <%= link_to "Delete game", game_path(game.id), method: :delete, class: "btn btn-danger", data: {confirm: "Are you sure? Deleted games cannot be recovered."} %>
+        <% end %>
+      </div>
+    </div>
+  <% end %>
+
+    
     
       
         
