--- a/app/views/pieces/show.html.erb
+++ b/app/views/pieces/show.html.erb
@@ -36,13 +36,21 @@
                       :y => piece.y_position
                     }
                   %>
-
-
-                  <% if @piece.square_occupied?(col, row) == nil? %>
-                    <%= link_to game_path %>
+                  <% else %>
+                  <%= link_to "Move Piece", game_path, method: :put, class:'btn btn-warning' %>
                   <% end %>
+                </td>
+              <% end %>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
 
-                <% end %>
+
+
+                  
+
     
                   
 
@@ -54,10 +62,3 @@
                 
                   
                 
-              </td>
-            <% end %>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
-  </div>
