Got pieces to move, can't get it to update/redirect to games#show page

--- a/app/views/pieces/show.html.erb
+++ b/app/views/pieces/show.html.erb
@@ -37,7 +37,7 @@
                     }
                   %>
                   <% else %>
-                  <%= link_to "Move Piece", game_path, method: :put, class:'btn btn-warning' %>
+                  <%= link_to "Move Here", piece_path, method: :put, class:'btn btn-warning' %>
                   <% end %>
                 </td>
               <% end %>
