--- a/app/views/pieces/show.html.erb
+++ b/app/views/pieces/show.html.erb
@@ -8,7 +8,7 @@
   
     
 
-<div class="col-10 center offset-1">
+  <div class="col-10 center offset-1">
     <table id="chessboard">
       <tbody>
         <% [8, 7, 6, 5, 4, 3, 2, 1].each do |row| %>
@@ -17,27 +17,29 @@
               <td
                 id=<%="#{col}#{row}"%>
               <% if (col + row).odd? %>
-                class = "white"
+                class="white"
               <% else %>
-                class = "black"
+                class="black"
               <% end %>
               >
-              
-             
-
-             <% piece_image = @game.render_piece(col, row) %>
+                <% piece_image = @game.render_piece(col, row) %>
                 <% if piece_image.present? %>
 
+                 
                   <% piece = @game.get_piece_at_coor(col, row) %>
-                  <%= image_tag piece_image, :id => "piece", :data => {
-                      :id => piece.id,
-                      :color => (piece.is_white ? "white" : "black"),
-                      :x => piece.x_position,
-                      :y => piece.y_position
-                    }
-                  %>
-                  <% else %>
-                  <%= link_to "Move Here", piece_path, method: :put, class:'btn btn-warning' %>
+                    
+                      <%= image_tag piece_image, :id => "piece", :data => {
+                          :id => piece.id,
+                          :type => piece.type,
+                          :color => (piece.is_white ? "white" : "black"),
+                          :x => piece.x_position,
+                          :y => piece.y_position
+                        }
+                      %>
+                 <% else %>
+                 <%= link_to "Move Here", piece_path, method: :put, class:'btn btn-secondary' %>     
+
+                    
                   <% end %>
                 </td>
               <% end %>
@@ -45,8 +47,16 @@
           <% end %>
         </tbody>
       </table>
-    </div>
 
+      <br>
+      <br>
+              
+              
+             
+
+             
+
+    
 
 
                   
