Got piece to move and update on piece#show page

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -44,7 +44,8 @@
                           :type => piece.type,
                           :color => (piece.is_white ? "white" : "black"),
                           :x => piece.x_position,
-                          :y => piece.y_position
+                          :y => piece.y_position,
+                          
                         }
                       %>
 
