--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,12 +1,9 @@
-<div class="booyah-box col-xs-8 col-xs-offset-2">
-	<h2>START A NEW GAME</h2><br>
-	
+Create Game
 
 <%= simple_form_for @game do |f| %>
   <%= f.input :name %>
-  <br />
-
-  <%=link_to 'Start game', games_path, :class => "btn", :method => 'POST' %> 
-<% end %>              
+  <%= f.input :white_player_id, :as => :hidden, :input_html => { :value => current_user.id } %>
+  <%= f.submit 'Create', class: 'btn btn-danger'%>
+<% end %>       
                   
       
