update_game_controller_rspec

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -233,7 +233,7 @@ section .section-title {
     #chessboard {
     width: 720px;
     height: 720px;
-    margin: auto;
+    margin: 0 auto;
 }
 
 #empty-square {
