--- a/app/views/pieces/show.html.erb
+++ b/app/views/pieces/show.html.erb
@@ -38,10 +38,7 @@
                       %>
                  <% else %>
                  
-                   <%= link_to "Move Here", piece_path(@piece), method: :put, class:'btn btn-secondary', :data => {:x_position => 3, :y_position  => 4}
-                   
-                        
-                  %>     
+                   <%= link_to "Move Here", piece_path(@piece, :new_x => col, :new_y => row ), method: :put, class:'btn btn-secondary'%>    
                   <% end %>
                 </td>
               <% end %>
@@ -52,6 +49,9 @@
 
       <br>
       <br>
+                   
+                        
+                       
 
 
                           
