--- a/app/views/pieces/show.html.erb
+++ b/app/views/pieces/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Pieces#show</h1>
+
 
 
 
@@ -12,7 +12,7 @@
     <table id="chessboard">
       <tbody>
         <% [8, 7, 6, 5, 4, 3, 2, 1].each do |row| %>
-          <tr>
+          <tr> 
             <% (1..8).each do |col| %>
               <td
                 id=<%="#{col}#{row}"%>
@@ -22,11 +22,11 @@
                 class="black"
               <% end %>
               >
-                <% piece_image = @game.render_piece(col, row) %>
+                <% piece_image = current_game.render_piece(col, row) %>
                 <% if piece_image.present? %>
 
                  
-                  <% piece = @game.get_piece_at_coor(col, row) %>
+                  <% piece = current_game.get_piece_at_coor(col, row) %>
                     
                       <%= image_tag piece_image, :id => "piece", :data => {
                           :id => piece.id,
@@ -36,19 +36,19 @@
                           :y => piece.y_position
                         }
                       %>
-                 <% else %>
-                 
-                   <%= link_to "Move Here", piece_path(@piece, :new_x => col, :new_y => row ), method: :put, class:'btn btn-secondary'%>    
-                  <% end %>
-                </td>
-              <% end %>
-            </tr>
-          <% end %>
-        </tbody>
-      </table>
+                <% end %>
+              </td>
+            <% end %>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+
+
 
       <br>
       <br>
+                    
                    
                         
                        
