--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -277,6 +277,12 @@ td:hover::after {
     background-repeat: no-repeat;
 }
 
+a.move_to {
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+
 
 
 
