--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -5,7 +5,7 @@
 @import url('https://fonts.googleapis.com/css?family=Dancing+Script:700');
 
 .hero {
-  background: image_url('ChessHero.jpeg') no-repeat center center;
+  background: image_url('ChessHero2.jpeg') no-repeat center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -15,7 +15,7 @@
 
 }
 
- 
+
 
 
 .nav-link {
