--- a/app/views/pawnshops/index.html.erb
+++ b/app/views/pawnshops/index.html.erb
@@ -10,7 +10,7 @@
             <div class="d-flex justify-content-center">
               <a class="navbar-brand" href="/">The Pawnshop</a>
             </div>
-            <h5 class="tag-line">Online chess</h5>
+            <h5 class="tag-line">Where the net comes for chess</h5>
             
             
             <div class="container">
